# nix-spotlight

./: .gitignore  COPYING  README.md  flake.nix  pyproject.toml
nix/: formatter.nix  package.nix
nix/modules/: darwin.nix  home-manager.nix  shared.nix
src/nix_spotlight/: __init__.py  __main__.py  dock.py  trampoline.py  types.py
tests/: __init__.py  conftest.py  test_cli.py  test_dock.py  test_trampoline.py
