[project]
name = "nix-spotlight"
version = "0.1.0"
description = "macOS Spotlight integration for Nix apps"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.13"

[project.scripts]
nix-spotlight = "nix_spotlight.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "all"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # conflicts with ruff fmt
    "D203",    # conflicts with ruff fmt
    "D213",    # conflicts with ruff fmt
    "S603",    # subprocess with trusted input (system tools, module paths)
]

[tool.ruff.lint.per-file-ignores]
"src/nix_spotlight/__main__.py" = [
    "T201",  # CLI entry point uses print for user output
]
"tests/*" = [
    "S101",  # pytest uses assert by design
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/nix_spotlight"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
